--- a/css/styles.css
+++ b/css/styles.css
@@ -1,21 +1,21 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,800;1,600;1,800&display=swap');
 
-
 html {
-    font-family: 'Open Sans', sans-serif;
+    font-family: 'Open sans', 'sans-serif';
     color: #373A3C;
 }
 
 a {
-    transition: 0.5s;
+    transition: .5s;
 }
 
 /* sidebar */
+
 #sidebar {
     position: fixed;
     height: 100%;
     width: 300px;
-    background: #006599;
+    background-color: #006599;
     padding-top: 40px;
 }
 
@@ -55,4 +55,253 @@ a {
     position: relative;
     margin-left: auto;
     margin-right: auto;
+}
+
+/* conteudo */
+
+.content {
+    position: absolute;
+    left: 300px;
+    width: calc(100% - 300px);
+}
+
+.content h1,
+.content h2 {
+    color: #006599;
+    margin-bottom: 30px;
+}
+
+.content h1 {
+    font-size: 48px;
+}
+
+.content h2 {
+    font-size: 35px;
+}
+
+section {
+    padding-left: 50px;
+}
+
+/* bem vindo */
+
+#sessao-bemvindo {
+    padding-left: 0;
+}
+
+.sessao-bemvindo-content {
+    padding-left: 50px;
+}
+
+#sessao-bemvindo .banner {
+    height: 500px;
+    background-image: url('/src/img/banner2.jpg');
+    background-position: center;
+    background-size: cover;
+}
+
+#sessao-bemvindo h1 {
+    margin-top: 70px;
+}
+
+#sessao-bemvindo::after,
+#sessao-sobre::after {
+    content: "";
+    display: block;
+    clear: both;
+    margin-bottom: 100px;
+}
+
+.sessao-minibanner {
+    width: 300px;
+    height: 400px;
+    background-image: url('/src/img/banner3.jpg');
+    background-position: center;
+    background-size: cover;
+    float: left;
+}
+
+.sessao-descricao {
+    position: absolute;
+    left: 370px;
+    padding-right: 30px;
+}
+
+.sessao-descricao p {
+    line-height: 2;
+    font-size: 16px;
+    margin-bottom: 30px;
+    margin-left: 25px;
+}
+
+.sessao-bemvindo-btn,
+form input[type=submit] {
+    background-color: #006599;
+    color: #FFF;
+    text-decoration: none;
+    padding: 20px 40px;
+    transition: .5s;
+    display: block;
+    width: 100px;
+    text-align: center;
+    border: none;
+    cursor: pointer;
+    margin-left: 25px;
+}
+
+.sessao-bemvindo-btn:hover,
+form input[type=submit]:hover {
+    background-color: #2790C6;
+}
+
+/* sessao sobre */
+
+#sessao-sobre .sessao-minibanner {
+    float: right;
+    margin-right: 50px;
+    background-image: url('/src/img/banner4.jpg');
+}
+
+#sessao-sobre .sessao-descricao {
+    position: absolute;
+    left: 25px;
+    width: calc(100% - 400px);
+}
+
+/* galerias */
+.banner-galeria {
+    background-position: center;
+    background-size: cover;
+    display: inline-block;
+    height: 200px;
+}
+
+#sessao-doces1,
+#sessao-doces2,
+#sessao-doces3 {
+    padding-right: 50px;
+    margin-bottom: 50px;
+}
+
+.doces1-imgs {
+    width: 18.8%;
+    margin-left: .5%;
+    margin-right: .5%;
+}
+
+#img1 {
+    background-image: url('/src/img/galeria1.jpg');
+    margin-left: 0;
+}
+
+#img2 {
+    background-image: url('/src/img/galeria2.jpg');
+}
+
+#img3 {
+    background-image: url('/src/img/galeria3.jpg');
+}
+
+#img4 {
+    background-image: url('/src/img/galeria4.jpg');
+}
+
+#img5 {
+    background-image: url('/src/img/galeria5.jpg');
+    margin-right: 0;
+}
+
+.doces2-imgs {
+    width: 32.3%;
+    margin-left: .5%;
+    margin-right: .5%;
+}
+
+#img6 {
+    background-image: url('/src/img/galeria6.jpg');
+    margin-left: 0;
+}
+
+#img7 {
+    background-image: url('/src/img/galeria7.jpg');
+}
+
+#img8 {
+    background-image: url('/src/img/galeria8.jpg');
+    margin-right: 0;
+}
+
+.doces3-imgs {
+    width: 23.9%;
+    margin-left: .5%;
+    margin-right: .5%;
+}
+
+#img9 {
+    background-image: url('/src/img/galeria9.jpg');
+    margin-left: 0;
+}
+
+#img10 {
+    background-image: url('/src/img/galeria10.jpg');
+}
+
+#img11 {
+    background-image: url('/src/img/galeria11.jpg');
+}
+
+#img12 {
+    background-image: url('/src/img/galeria12.jpg');
+    margin-right: 0;
+}
+
+/* contato */
+
+#form-contato {
+    width: 500px;
+}
+
+#form-contato input[type=text],
+#form-contato input[type=email],
+#form-contato textarea {
+    display: block;
+    border: 1px solid #006599;
+    padding: 10px;
+    margin-bottom: 20px;
+    width: 100%;
+    font-size: 16px;
+    font-family: 'Open sans', sans-serif;
+}
+
+#form-contato input[type=text]:focus,
+#form-contato input[type=email]:focus,
+#form-contato textarea:focus {
+    border-color: #2790C6;
+}
+
+#form-contato textarea {
+    height: 150px;
+}
+
+#form-contato ::placeholder {
+    color: #2790C6;
+}
+
+#form-contato input[type=submit] {
+    margin-left: 0;
+    font-size: 16px;
+    width: 180px;
+}
+
+/* footer */
+
+footer {
+    height: 100px;
+    padding-top: 150px;
+    color: #006599;
+}
+
+footer p {
+    text-align: center;
+    font-weight: bold;
 }
